--- a/property_management_system/dashboard/templates/dashboard.html
+++ b/property_management_system/dashboard/templates/dashboard.html
@@ -259,12 +259,26 @@
             <li class="nav-item d-flex align-items-center">
               <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="https://www.creative-tim.com/builder?ref=navbar-soft-ui-dashboard">Online Builder</a>
             </li>
+
             <li class="nav-item d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
-                <i class="fa fa-user me-sm-1"></i>
-                <span class="d-sm-inline d-none">Sign In</span>
-              </a>
+              {% if user.is_authenticated %}
+
+                <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                  {% csrf_token %}
+                  <button type="submit" class="nav-link text-body font-weight-bold px-0" style="background: none; border: none; cursor: pointer;">
+                    <i class="fa fa-sign-out me-sm-1"></i>
+                    <span class="d-sm-inline d-none">Logout</span>
+                  </button>
+                </form>
+
+              {% else %}
+                <a href="{% url 'login' %}" class="nav-link text-body font-weight-bold px-0">
+                  <i class="fa fa-user me-sm-1"></i>
+                  <span class="d-sm-inline d-none">Sign In</span>
+                </a>
+              {% endif %}
             </li>
+
             <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
