--- a/property_management_system/users/templates/sign-up.html
+++ b/property_management_system/users/templates/sign-up.html
@@ -41,7 +41,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3 navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="dashboard.html">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="../../dashboard/templates/dashboard.html">
         Soft UI Dashboard 3
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,13 +54,13 @@
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="navbar-nav mx-auto ms-xl-auto me-xl-7">
           <li class="nav-item">
-            <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="dashboard.html">
+            <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="../../dashboard/templates/dashboard.html">
               <i class="fa fa-chart-pie opacity-6  me-1"></i>
               Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-2" href="profile.html">
+            <a class="nav-link me-2" href="../../dashboard/templates/profile.html">
               <i class="fa fa-user opacity-6  me-1"></i>
               Profile
             </a>
