--- a/property_management_system/users/templates/sign-in.html
+++ b/property_management_system/users/templates/sign-in.html
@@ -69,13 +69,13 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-2" href="sign-up.html">
+                  <a class="nav-link me-2" href="{% url 'register' %}">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
                     Sign Up
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-2" href="../pages/sign-in.html">
+                  <a class="nav-link me-2" href="{% url 'login' %}">
                     <i class="fas fa-key opacity-6 text-dark me-1"></i>
                     Sign In
                   </a>
@@ -142,10 +142,12 @@
                   </form>
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
+
                   <p class="mb-4 text-sm mx-auto">
                     Don't have an account?
-                    <a href="javascript:;" class="text-info text-gradient font-weight-bold">Sign up</a>
+                    <a href="{% url 'register' %}" class="text-info text-gradient font-weight-bold">Sign up</a>
                   </p>
+
                 </div>
               </div>
             </div>
