--- a/property_management_system/users/templates/sign-up.html
+++ b/property_management_system/users/templates/sign-up.html
@@ -204,6 +204,14 @@
                       I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
                     </label>
                   </div>
+                  <!--Landlord checkbox-->
+                  <div class="form-check form-check-info text-left mb-3">
+                    <input class="form-check-input" type="checkbox" name="is_landlord" id="id_is_landlord">
+                    <label class="form-check-label" for="id_is_landlord">
+                      I want to register as a Landlord
+                    </label>
+                  </div>
+
                   <div class="text-center">
                     <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
                   </div>
