--- a/property_management_system/dashboard/templates/dashboard.html
+++ b/property_management_system/dashboard/templates/dashboard.html
@@ -263,6 +263,13 @@
             <li class="nav-item d-flex align-items-center">
               {% if user.is_authenticated %}
 
+                <!-- Check if users is LANDLORD(role 2) -->
+                {% if user.role == 2 %}
+                  <li class="nav-item">
+                    <a class="btn btn-outline-primary btn-sm mb-0 me-3" href="{% url 'send_invitation' %}">Invite Tenant</a>
+                  </li>
+                {% endif %}
+
                 <form method="post" action="{% url 'logout' %}" style="display: inline;">
                   {% csrf_token %}
                   <button type="submit" class="nav-link text-body font-weight-bold px-0" style="background: none; border: none; cursor: pointer;">
@@ -276,6 +283,7 @@
                   <i class="fa fa-user me-sm-1"></i>
                   <span class="d-sm-inline d-none">Sign In</span>
                 </a>
+
               {% endif %}
             </li>
 
