--- a/property_management_system/dashboard/templates/profile.html
+++ b/property_management_system/dashboard/templates/profile.html
@@ -63,6 +63,11 @@
 
                 <div class="d-flex justify-content-end mt-4">
                   <button type="button" class="btn bg-gradient-primary mb-0">Edit Profile</button>
+                  {% if role_name == "Landlord" %}
+                  <a href="{% url 'send_invitation' %}" class="btn bg-gradient-success mb-0 ms-2">
+                    <i class="fas fa-user-plus me-2"></i>Invite
+                  </a>
+                  {% endif %}
                 </div>
               </div>
             </div>
