--- a/src/dashboard/templates/profile.html
+++ b/src/dashboard/templates/profile.html
@@ -63,9 +63,9 @@
 
                 <div class="d-flex justify-content-end mt-4">
                   <button type="button" class="btn bg-gradient-primary mb-0">Edit Profile</button>
-                  <button type="button" class="btn bg-gradient-info mb-0 ms-2">
+                  <a href="{% url 'password_change' %}" class="btn bg-gradient-info mb-0 ms-2">
                     <i class="fas fa-key me-2"></i>Change Password
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
