--- a/src/notifications/templates/edit_reminder.html
+++ b/src/notifications/templates/edit_reminder.html
@@ -28,8 +28,8 @@
                 {{ form.due_date }}
               </div>
               <div class="mb-3">
-                <label for="{{ form.property.id_for_label }}">Property</label>
-                {{ form.property }}
+                <label for="{{ form.unit.id_for_label }}">Unit</label>
+                {{ form.unit }}
               </div>
               <div class="d-flex justify-content-between mt-4">
                 <a href="{% url 'profile' %}" class="btn btn-secondary mb-0">Cancel</a>
